--- a/app/views/invitation/_student.html.haml
+++ b/app/views/invitation/_student.html.haml
@@ -1,5 +1,3 @@
-%p Please let us know if you will be attending our workshop by setting your attendance status.
+%p In our workshops, you will get to go through any of our available tutorials, ask for programming advice or get help on your own projects.
 
-%p In our coding workshops, you will get to go through any of our available tutorials with help from our coaches or get help on your own projects. Our latest tutorial is <b> #{@invitation.sessions.title}</b> - #{@invitation.sessions.description}
-
-%p If you are unable to attend, please make sure you update your attendance status. We have limited space and do a coaches request depending on the number of attending students.
+%p In case you are unable to attend after you RSVP, please make sure you come back and update your attendance. We have limited space and do a coaches request depending on the number of attending students.
