--- a/app/views/dashboard/effective-teacher-guide.html.haml
+++ b/app/views/dashboard/effective-teacher-guide.html.haml
@@ -1,20 +1,16 @@
-%section
-
-  .titlebox.session.upcoming
-    %h2 How to be an effective teacher
-
+= render partial: 'shared/title', locals: { title: "Coaching guide", date: nil }
+%section#banner
   .row
-    .description
-      %ul.guide
-        %li You don't need a laptop for our sessions. You are there to watch and guide the students; if you don't feel comfortable with the tutorial you should spend time on it before coming if you want to help out
-        %li Do not take over the keyboard! This can be off-putting and scary
-        %li Encourage the students to type and not copy paste
-        %li Explain that there are no dumb questions
-        %li Explain to students that it's ok to make mistakes
-        %li Always introduce yourself, say why you want to help out and are spending your own time on this, why you like programming
-        %li Give your students the opportunity to know each other, ask their names, why they are here, what they do in their day jobs; encourage a brief discussion before starting
-        %li Explain that this is a collaborative session
-        %li Assume that anyone you're teaching has no knowledge but infinite intelligence.
+    .large-12.columns
+      %ul.square
+        %li You don't need a laptop for our workshops. You are there to watch and guide the students; if you don't feel comfortable with the tutorial you should spend time on it before coming if you want to help out
+        %li Do not take over the keyboard! This can be off-putting and scary.
+        %li Encourage the students to type and not copy paste.
+        %li Explain that there are no dumb questions.
+        %li Explain to students that it's ok to make mistakes.
+        %li Always introduce yourself, say why you want to help out and are spending your own time on this, why you like programming.
+        %li Give your students the opportunity to know each other, ask their names, why they are here, what they do in their day jobs; encourage a brief discussion before starting.
+        %li Assume that anyone you're teaching has no knowledge but infinite intelligence..
         %li Work collaboratively with your student. If you have two students, you should work with both, not focus all your attention on one of them.
         %li Let students have a go at answering the questions first. Help with leading questions. Encourage a discussion.
         %li Take it slow, you are the teacher, they are the student. Allow for time between questions.
@@ -22,3 +18,6 @@
         %li Use pen and paper or go to a whiteboard! Often students are coming from a non-technical background. Drawing and explaining with visual material is really helpful.
         %li Let them stumble. We learn by making mistakes, getting frustrated, and working through problem in our own way. Be supportive, but let them explore.
 
+  .row
+    .large-12.columns
+      %p Do you have something to suggest? Make a #{link_to "pull request", "https://github.com/codebar/planner"} or #{link_to "create an issue", "https://github.com/codebar/planner/issues/new"}.
