--- a/app/views/events/_events.html.haml
+++ b/app/views/events/_events.html.haml
@@ -1,11 +1,15 @@
 .events
-  %ul
-    - events.each do |event|
-      %li{ class: event.class.to_s.downcase}
-        %h3
-          - unless event.is_a?(Sessions)
-            =link_to event do
+  - events.each_slice(3).each do |grouped_events|
+    .row{ "data-equalizer" => "" }
+      - grouped_events.each do |event|
+        .large-4.columns
+          %ul.pricing-table{ "data-equalizer-watch" => '', class: event.class.to_s.downcase }
+            %li.title
               = event.to_s
-          - else
-            = event.to_s
-        =l(event.date_and_time, format: :website_format)
+            %li.description
+              =l(event.date_and_time, format: :website_format)
+            %li.cta-button
+              - unless event.is_a?(Sessions)
+                =link_to "View details", event, class: "button round tiny"
+              - else
+                =link_to "Sign up", '/auth/github', class: "button round tiny"
