--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,54 +1,40 @@
-%section#meeting
-  .titlebox.meeting
-    %h2
-      = @meeting.title
-    %small
-      ="#{l(@meeting.date_and_time, format: :meeting_format)}"
-      to
-      ="#{l(@meeting.end_time, format: :time)}"
+= render partial: 'shared/title', locals: { title: @meeting.title, date: "#{l(@meeting.date_and_time, format: :meeting_format)} to #{l(@meeting.end_time, format: :time)}" }
 
+%section.meeting
+  .row
+    .large-12.columns
+      %ul.no-bullet
+        - @meeting.meeting_talks.each do |talk|
+          %li
+            %h3
+              =talk.title
+              - if talk.description.present?
+                .subheader
+                  =talk.description
 
-    .dot
+            %p
+              = talk.abstract.html_safe
 
-  .description
-    - if @meeting.description.present?
-      %p.lead
-        =@meeting.description
-    - @meeting.meeting_talks.each do |talk|
-      .talk
+            .row
+              .small-2.columns
+                =link_to twitter_url_for(talk.speaker.twitter) do
+                  =image_tag talk.speaker.avatar(96), class: 'th radius'
 
-        .information
-          %h3
-            =talk.title
-            - if talk.description.present?
+              .small-10.columns
+                =link_to twitter_url_for(talk.speaker.twitter) do
+                  = talk.speaker.full_name
+                %p= talk.speaker.about_you.html_safe
+            %hr
+        %p
+          To secure a place at the meeting, you must #{link_to "register with our host, <strong>#{@meeting.venue.name}</strong>".html_safe, @meeting.lanyrd_url}
+          .row
+            .large-3.columns
+              = link_to image_tag(@meeting.venue.avatar, class: "sponsor-logo", alt: @meeting.venue.name), @meeting.venue.website
               %br
-              %small=talk.description
-
-          = talk.abstract.html_safe
-
-        .tutor
-          .avatar
-            =link_to twitter_url_for(talk.speaker.twitter) do
-              =image_tag talk.speaker.avatar(70)
-
-          .about
-            %strong= talk.speaker.full_name
-            =link_to "@#{talk.speaker.twitter}", twitter_url_for(talk.speaker.twitter)
-            %br= talk.speaker.about_you.html_safe
-    .sub-block
-      To secure a place at the meeting, you must #{link_to "register with our host, <strong>#{@meeting.venue.name}</strong>".html_safe, @meeting.lanyrd_url}
-    %br
-    %hr
-      .venue
-        %h2 Venue
-        .row
-          .third
-            = link_to image_tag(@meeting.venue.avatar, class: "sponsor-logo", alt: @meeting.venue.name), @meeting.venue.website
-            .address
               = AddressDecorator.decorate(@meeting.venue.address).to_html
-          .two-thirds
-            %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@map_address}&ie=UTF8&t=m&z=15&output=embed} }
-            %br
-            %small
-              =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@map_address}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
+            .large-9.columns
+              %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@map_address}&ie=UTF8&t=m&z=15&output=embed} }
+              %br
+              %small
+                =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@map_address}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
 
