fix, set html language

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lan="en">
+<html lang="en">
   <head>
     <%= render partial: 'layouts/meta' %>
     <link rel="image_src" href="http://codebar.io/images/logo-square.png">
