--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -12,22 +12,7 @@
 
       .row
         .medium-12.columns
-          %ul.inline-list.right.social-media
-            %li.github
-              =link_to "https://github.com/codebar" do
-                %span.fa-stack.fa-lg
-                  %i.fa.fa-square.fa-stack-2x
-                  %i.fa.fa-github.fa-stack-1x.fa-inverse
-            %li.twitter
-              =link_to  "https://twitter.com/by_codebar" do
-                %span.fa-stack.fa-lg
-                  %i.fa.fa-square.fa-stack-2x
-                  %i.fa.fa-twitter.fa-stack-1x.fa-inverse
-            %li.facebook
-              =link_to "https://facebook.com/bycodebar" do
-                %span.fa-stack.fa-lg
-                  %i.fa.fa-square.fa-stack-2x
-                  %i.fa.fa-facebook.fa-stack-1x.fa-inverse
+          = render partial: 'shared/social_media'
 
 %section
   .events
@@ -74,7 +59,7 @@
                 %li.bullet-item
                   = @next_course.short_description.html_safe
                 %li.cta-button
-                  =link_to "Read more", @next_course, class: "button round tiny "
+                  =link_to "View details", @next_course, class: "button round tiny "
 
   .row
     %hr
