update profile page and link to member portal

--- a/app/views/dashboard/wall_of_fame.html.haml
+++ b/app/views/dashboard/wall_of_fame.html.haml
@@ -9,7 +9,7 @@
             .row
               .small-2.columns
                 =link_to twitter_url_for(coach.twitter) do
-                  =image_tag coach.avatar(96), class: 'th radius'
+                  =image_tag coach.avatar(96), class: 'th radius', title: coach.full_name
 
               .small-10.columns
                 =link_to twitter_url_for(coach.twitter) do
