--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,8 +1,5 @@
-%section#member
-  .titlebox.mission
-    %h2
-      Profile
-      .dot
-  .description
-    %p.lead
-    = render partial: 'members/form', locals: { submit_text: "Update" }
+= render partial: 'shared/title', locals: { title: "Profile", date: nil }
+%section#banner
+  .row
+    .large-12.columns
+      = render partial: 'members/form', locals: { submit_text: "Update" }
