--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -1,5 +1,5 @@
 = render partial: 'shared/title', locals: { title: "Frequently Asked Questions", date: nil }
-%section#faq
+%section#banner
   .row
     .large-12.columns
       %dl
