--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,6 +1,6 @@
-.messages
-  - flash.each do |name, msg|
-    - if msg.is_a?(String)
-      %div{:class => "alert alert-#{name == :notice ? "success" : "error"}"}
-        %a.close{"data-dismiss" => "alert"}
-        = content_tag :div, msg.html_safe, :id => "flash_#{name}"
+- flash.each do |name, msg|
+  - if msg.is_a?(String)
+    %div{ "data-alert" => '', :class => "alert-box info" }
+      =link_to "#", class: 'close' do
+        &times;
+      = content_tag :div, msg.html_safe
