--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,6 @@
 %footer
   .row
-    .large-6.columns
+    .large-4.columns
       %p.copyright
         &#169; 2014 codebar
 
@@ -8,10 +8,10 @@
         Send us an email at
         =mail_to "hello@codebar.io?Subject=Hello%20Codebar", "hello@codebar.io"
 
-    .large-6.columns
-      .row
-        .medium-12.columns
-          = render partial: 'shared/social_media'
-
-  .row
-    .large-12.columns.text-right
+    .large-4.columns
+      %ul.no-bullet
+        %li= link_to "Code of conduct", code_of_conduct_path
+        %li= link_to "Coach guide", teaching_guide_path
+        %li= link_to "Tutorials", teaching_guide_path
+    .large-4.columns
+      = render partial: 'shared/social_media'
